--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -8,33 +8,33 @@
                 <div class="column col-12">
                     <div class="empty">
                         <div class="empty-icon">
-                            <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+                            <i class="fas fa-user-circle fa-3x" aria-hidden="true"></i>
                         </div>
                         <h1 class="empty-title h5">{{ i18n.trans('login-to-continue') }}</h1>
                         <p class="empty-subtitle">{{ i18n.trans('login-to-continue-paragraph') }}</p>
                         <div class="empty-action">
                             {% if appSettings.get('webportal','fbappid','') != '' %}
                                 <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
-                                    <i class="fa fa-facebook fa-fw" aria-hidden="true"></i> facebook
+                                    <i class="fas fa-facebook fa-fw" aria-hidden="true"></i> facebook
                                 </a>
                                 <br/>
                             {% endif %}
                             {% if appSettings.get('webportal','googleappid','') != '' %}
                                 <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
-                                    <i class="fa fa-google fa-fw" aria-hidden="true"></i> google
+                                    <i class="fas fa-google fa-fw" aria-hidden="true"></i> google
                                 </a>
                                 <br/>
                             {% endif %}
                             {% if appSettings.get('webportal','twitterappid','') != '' %}
                                 <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
-                                    <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
+                                    <i class="fas fa-twitter fa-fw" aria-hidden="true"></i> twitter
                                 </a>
                                 <br/>
                             {% endif %}
                             {% if appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
                                 <div class="btn-group btn-group-block">
                                     <a href="#" class="btn btn-primary" onclick="return showModal('loginModal');">
-                                        <i class="fa fa-key fa-fw" aria-hidden="true"></i> {{ i18n.trans('password') }}
+                                        <i class="fas fa-key fa-fw" aria-hidden="true"></i> {{ i18n.trans('password') }}
                                     </a>
                                     {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
                                         <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
