--- a/View/Master/Portal404.html.twig
+++ b/View/Master/Portal404.html.twig
@@ -8,7 +8,7 @@
                 <div class="column col-12">
                     <div class="empty">
                         <div class="empty-icon">
-                            <i class="fa fa-search fa-3x" aria-hidden="true"></i>
+                            <i class="fas fa-search fa-3x" aria-hidden="true"></i>
                         </div>
                         <h1 class="empty-title h5">{{ i18n.trans('no-data') }}</h1>
                     </div>
