--- a/View/Section/ListSection.html.twig
+++ b/View/Section/ListSection.html.twig
@@ -21,7 +21,7 @@
 {# -- Body section -- #}
 {% block sectionBody %}
     <div class="custom-scroll">
-        <table class="table table-hover">
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     {% for column in section.getColumns() %}
@@ -30,8 +30,10 @@
                 </tr>
             </thead>
             <tbody>
+                {% set rowStatus = section.getRow('status') %}
                 {% for model in section.cursor %}
-                    <tr class="clickableRow" data-href="{{ model.url() }}">
+                    {% set trClass = rowStatus.trClass(model) %}
+                    <tr class="{{ trClass }}">
                         {% for column in section.getColumns() %}
                             {{ column.tableCell(model) | raw }}
                         {% endfor %}
@@ -72,11 +74,11 @@
                 <i class="fas fa-sort fa-fw" aria-hidden="true"></i>
             </span>
             <select name="order" class="form-select" onchange="this.form.submit();">
-                {% for option in section.orderOptions %}
+                {% for key, option in section.orderOptions %}
                     {% if option.selected %}
-                        <option value="{{ option.field }} {{ option.order }}" selected="">{{ option.label }} {{ option.order }}</option>
+                        <option value="{{ key }}" selected="">{{ option.label }} {{ option.type }}</option>
                     {% else %}
-                        <option value="{{ option.field }} {{ option.order }}">{{ option.label }} {{ option.order }}</option>
+                        <option value="{{ key }}">{{ option.label }} {{ option.type }}</option>
                     {% endif %}
                 {% endfor %}
             </select>
@@ -101,7 +103,7 @@
 {% endmacro %}
 
 {% macro sectionSearch(section, i18n) %}
-    {% if section.searchOptions | length > 0 %}
+    {% if section.searchFields | length > 0 %}
         <div class="input-group">
             <input type="text" name="query" value="{{ section.query }}" class="form-input" placeholder="{{ i18n.trans('search') }}" autocomplete="off"/>
             <button class="btn btn-primary input-group-btn">
