--- a/View/Section/ListSection.html.twig
+++ b/View/Section/ListSection.html.twig
@@ -23,12 +23,13 @@
 
 {# -- Body section -- #}
 {% block sectionBody %}
+    {% set level = fsc.contact ? fsc.contact.level : 0 %}
     <div class="custom-scroll">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     {% for column in section.getColumns() %}
-                        {{ column.tableHeader() | raw }}
+                        {{ column.tableHeader(level) | raw }}
                     {% endfor %}
                 </tr>
             </thead>
@@ -38,7 +39,7 @@
                     {% set trClass = rowStatus.trClass(model) %}
                     <tr class="{{ trClass }}">
                         {% for column in section.getColumns() %}
-                            {{ column.tableCell(model) | raw }}
+                            {{ column.tableCell(model, level) | raw }}
                         {% endfor %}
                     </tr>
                 {% else %}
